# uni-5-fyp-camera-projector-hybrid-board-game

./: .gitignore  README.md  pyproject.toml  setup.sh
docs/proposal/: proposal.md
docs/report/: fyp-report-style.sty  main.tex  references.bib
prototypes/client-server-game-engine/: README.md  pyproject.toml
prototypes/client-server-game-engine/src/client/: client.py  network.py
prototypes/client-server-game-engine/src/server/: server.py
prototypes/client-server-game-engine/src/utils/: utils.py
prototypes/game-piece-detection/: Dockerfile  README.md  pyproject.toml
prototypes/game-piece-detection/src/: detect.py  detect_color.py  utils.py
prototypes/game-piece-detection/src/training/collect/: collect_dataset.py  create_combined_positive_set.py  image_processor.py
prototypes/game-piece-detection/training/combined_experiment_4/: cascade.xml  stage0.xml  stage1.xml  stage2.xml
prototypes/game-piece-detection/training/combined_experiment_6/: README.md  cascade.xml  params.xml  positive_combined.vec  stage0.xml  stage1.xml  stage2.xml  stage3.xml
prototypes/game-piece-detection/training/combined_experiment_7/: README.md  stage0.xml  stage1.xml  stage2.xml  stage3.xml
prototypes/game-piece-detection/training/red_experiment_1/: README.md  cascade.xml  stage1.xml  stage2.xml
prototypes/game-piece-detection/training/red_experiment_2/: README.md  cascade.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml
prototypes/game-piece-detection/training/red_experiment_3/: README.md  stage0.xml  stage1.xml
prototypes/game-piece-detection/training/red_experiment_5/: README.md  cascade.xml  params.xml  positive_red.vec
prototypes/playing-surface-board-detection/: README.md  pyproject.toml
prototypes/playing-surface-board-detection/src/: detect.py  generate.py
prototypes/playing-surface-board-detection/tests/: conftest.py  test_detect.py
src/client/: client.py  config.yaml
src/client/utils/: config.py  debug.py  image_transform.py  input_handler.py  setup.py
src/client/utils/calibration/: calibration.py
src/client/utils/detection/: board.py  smoothing.py  tokens.py
src/client/utils/detection/model/: token_cascade.xml
src/common/game_logic/: smoothing.py  states.py
src/common/game_logic/games/tic_tac_toe/: game.py
src/common/game_objects/board/: board.py
src/common/game_objects/sprites/setup/: calibration.py
src/common/game_objects/sprites/tic_tac_toe/: board.py
src/common/game_objects/tokens/: token.py
