[tool.poetry]
name = "fyp"
version = "0.1.0"
description = ""
authors = ["Likkan Chung <llc721@student.bham.ac.uk>"]

packages = [
    { include = "src/**/*.*"}
]

[tool.poetry.dependencies]
python = "^3.6"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
client = "src.client.client:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
