[tool.poetry]
name = "prototype-client-server-game-engine"
version = "0.1.0"
description = ""
authors = ["Likkan Chung <llc721@student.bham.ac.uk>"]

packages = [
    { include = "src"}
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
client = "src.client.client:main"
server = "src.server.server:main"